# openapi_explorer

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  RELEASE.md  SESSION_SUMMARY.md  TESTING.md  TODO.md  install.ps1  install.sh  swagger.json
.github/workflows/: ci.yml  release.yml
examples/: petstore.json
src/: app.rs  events.rs  indexer.rs  lib.rs  main.rs  parser.rs
src/ui/: endpoints.rs  fields.rs  graph.rs  layout.rs  mod.rs  schemas.rs
tests/: integration_test.rs
