[package]
name = "openapi-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Franck <franck@example.com>"]
description = "TUI OpenAPI Field Explorer - Analyze database fields across API endpoints"
license = "MIT"
repository = "https://github.com/franck/openapi-explorer"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# JSON Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Fuzzy Search
fuzzy-matcher = "0.3"

# Error Handling
anyhow = "1.0"

# File Watching
notify = "6.0"

# CLI Arguments
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "openapi_explorer"
path = "src/lib.rs"

[[bin]]
name = "openapi-explorer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2